--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^7.3.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^3.1.4",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.3",
     "sass": "^1.54.9"
