--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-error-boundary": "^3.1.4",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.3",
+    "react-toastify": "^9.1.1",
     "sass": "^1.54.9"
   },
   "devDependencies": {
