--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
     "react-icons": "^4.6.0",
+    "react-lazy-load-image-component": "^1.5.6",
+    "react-query": "^3.39.2",
     "react-router-dom": "^6.4.3",
     "react-toastify": "^9.1.1",
     "sass": "^1.54.9"
@@ -23,6 +25,7 @@
   "devDependencies": {
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/react-lazy-load-image-component": "^1.5.2",
     "@vitejs/plugin-react": "^2.1.0",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
